--- a/OOP_code.html
+++ b/OOP_code.html
@@ -44,6 +44,7 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item"><a class="nav-link" href="index.html#">Avaleht</a></li>
+            <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Koodinäited</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
         </ul>
