--- a/OOP_code.html
+++ b/OOP_code.html
@@ -55,7 +55,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-white my-2 ml-2">
             <li class="breadcrumb-item"><a href="index.html">Avaleht</a></li>
-            <li class="breadcrumb-item active">Koodinäited</li>
+            <li class="breadcrumb-item active">Presentatsioon</li>
         </ol>
     </nav>
 </section>
