--- a/OOP_tooted.html
+++ b/OOP_tooted.html
@@ -76,7 +76,7 @@
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
                                 <h5> <a  href=https://et.wikipedia.org/wiki/Kazimir_Malevit%C5%A1 class="text-dark">Kazimir Malevitš "Must ruut" (1923), 400px * 400px</a></h5>
-                                <p class="text-muted card-text"> 9.99&#8364;</p>
+                                <p class="text-muted card-text"> 249 999.99&#8364;</p>
 
                             </div> 
                         </div> 
