--- a/Last_page.html
+++ b/Last_page.html
@@ -21,7 +21,7 @@
 <header class="py-2">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 my-3 text-center"><a href="index.html"><img src="logo2.png" width="100%"></a></div>
+            <div class="col-lg-12 my-3 text-center"><a><img src="logo2.png" width="100%"></a></div>
         </div>
     </div>
 </header>
@@ -33,11 +33,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
+            <!-- No_menu_start
             <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
-            <li class="nav-item"><a class="nav-link" href="Last_page.html">Interneti viimane lehekülg</a></li>
+            No_menu_end -->
         </ul>
     </div>
 </nav>
@@ -46,24 +47,21 @@
 <section>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-white my-2 ml-2">
-            <li class="breadcrumb-item active" aria-current="page">Avaleht</li>
+            <li class="breadcrumb-item active" aria-current="page">Interneti viimane lehekülg</li>
         </ol>
     </nav>
 </section>
 <!-- jumbotron --->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-4">Tähelepanu!</h1>
-        <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Kõik toimib, nagu kellavärk! Loodud spetsiaalselt OOP projekti
-            kaitsmiseks. Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud! Isegi õppejõud!</p>
+        <h1 class="display-4">Õnnitlused!</h1>
+        <p class="lead">Oled jõudnud Interneti viimasele leheküljele. Siit edasi pole Sul enam mitte kuhugi minna,
+            sest Internet lõpeb siin!</p>
+        <p class="lead">Siit algab Sinu reaalne elu! Leia end!</p>
         <hr class="my-4">
-        <p>Me olime kõikides loengutes ja praktikumides aktiivselt (Sorry, Martin, kõikide meie poolt tehtud märkuste ja targutamiste pärast! ;-) kohal, kuid ikkagi ei me suuda meenutada,
-            et oleksime OOP-is veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb
-            seekord.</p>
-        <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile jne jne, siis on
-            suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! Muideks, see on väga popp kursus! Kiirusta registreerimisega!</p>
+
         <p class="lead">
-            <button class="btn btn-outline-dark" onclick="myFunction()">Mõttetu nupp </button>
+
         </p>
     </div>
 </div>
@@ -92,19 +90,19 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h6 class="text-uppercase mb-3 font-weight-bold">
-                        Abiks lingid
+                        ENDISED "Abiks lingid" on deaktiveeritud. See on ikkagi viimane lehekülg!
                     </h6>
                     <p>
-                        <a href=https://moodle.ut.ee/ class="text-white">Tartu Ülikooli Moodle</a>
+                        <a >Tartu Ülikooli Moodle</a>
                     </p>
                     <p>
-                        <a href=https://courses.cs.ut.ee/ class="text-white">Courses.cs.ut.ee</a>
+                        <a >Courses.cs.ut.ee</a>
                     </p>
                     <p>
-                        <a href=https://www.facebook.com/martin.toode class="text-white">Martin Toode, FB</a>
+                        <a >Martin Toode, FB</a>
                     </p>
                     <p>
-                        <a href=https://www.etis.ee/CV/Helle_Hein/est class="text-white">Helle Hein, ETIS</a>
+                        <a >Helle Hein, ETIS</a>
 
                     </p>
                 </div>
@@ -136,7 +134,7 @@
                     <!-- Copyright -->
                     <div class="p-1">
                         © 2021 Copyright:
-                        <a class="text-white" href="https://united-lavatories.com/">United Lavatories</a>
+                        <a class="text-white" >United Lavatories</a>
                     </div>
                     <!-- Copyright -->
                 </div>
@@ -148,7 +146,7 @@
                             class="btn btn-outline-light btn-floating m-1"
                             class="text-white"
                             role="button"
-                            href="https://www.facebook.com">
+                            >
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <!-- Twitter -->
@@ -156,7 +154,7 @@
                             class="btn btn-outline-light btn-floating m-1"
                             class="text-white"
                             role="button"
-                            href="https://www.twitter.com">
+                            >
                         <i class="fab fa-twitter"></i>
                     </a>
                     <!-- Google -->
@@ -164,7 +162,7 @@
                             class="btn btn-outline-light btn-floating m-1"
                             class="text-white"
                             role="button"
-                            href="https://www.google.com">
+                            >
                         <i class="fab fa-google"></i>
                     </a>
                     <!-- Instagram -->
@@ -172,7 +170,7 @@
                             class="btn btn-outline-light btn-floating m-1"
                             class="text-white"
                             role="button"
-                            href="https://www.instagram.com">
+                            >
                         <i class="fab fa-instagram"></i>
                     </a>
                     <!-- Rate.ee -->
@@ -180,7 +178,7 @@
                             class="btn btn-outline-light btn-floating m-1"
                             class="text-white"
                             role="button"
-                            href="https://www.rate.ee">Rate.ee
+                            >Rate.ee
                     </a>
                 </div>
                 <!-- Grid column -->
