--- a/OOP_code.html
+++ b/OOP_code.html
@@ -47,6 +47,7 @@
             <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Presentatsioon</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
+            <li class="nav-item"><a class="nav-link" href="Last_page.html">Interneti viimane lehekülg</a></li>
         </ul>
     </div>
 
@@ -71,14 +72,13 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block w-100" src="11s.jpg" alt="Esimene slaid">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="12s.jpg" alt="Teine slaid">
+            <img class="d-block w-100" src="16s.jpg" alt="Teine slaid">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="13s.jpg" alt="Kolmas slaid">
@@ -88,9 +88,6 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="15s.jpg" alt="Viies slaid">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="16s.jpg" alt="Kuues slaid">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
