--- a/OOP_meist.html
+++ b/OOP_meist.html
@@ -45,6 +45,7 @@
             <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Meist</a></li>
+            <li class="nav-item"><a class="nav-link" href="Last_page.html">Interneti viimane lehekülg</a></li>
 
         </ul>
     </div>
@@ -130,7 +131,7 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Sekretär Pamela</a></h5>
+                        <h5><a href="#" class="text-dark">Testosteraator Pamela</a></h5>
 
                         <p class="text-muted card-text"> pammy@laicamaica.ee</p>
 
