--- a/OOP_tooted.html
+++ b/OOP_tooted.html
@@ -35,6 +35,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Tooted</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Last_page.html">Interneti viimane lehekülg</a></li>
                 </ul>
             </div>
         </nav>
